# compile-amdgpu

./: CMakeLists.txt  compile.cpp  compile_gcn.cpp
test/: dummy.amdgpu  median.amdgpu
